<resources>
    <string name="app_name">kyc_centralized</string>
    <string name="alert_not_verified_text">Tingkatkan kepercayaan calon pembeli dengan upload KTP. Upload Sekarang</string>
    <string name="alert_not_verified_highlight_text">Upload Sekarang</string>
    <string name="alert_waiting_verification_text">Akun toko Anda sedang dalam proses menunggu
        verifikasi. Lihat status</string>
    <string name="alert_waiting_verification_highlight_text">Lihat status</string>
    <string name="alert_failed_verification_text">Verifikasi akun toko anda gagal diproses.
    Verifikasi ulang</string>
    <string name="alert_failed_verification_highlight_text">Verifikasi ulang</string>
    <string name="ticker_unverified"><![CDATA[Tingkatkan kepercayaan calon pembeli dengan upload KTP.
     <font color=\'#42b549\'><a href="https://m.tokopedia.com/terms/merchantkyc">Pelajari Selengkapnya</a></font>]]></string>
    <string name="kyc_upload_title">Upload Foto</string>
    <string name="kyc_intro_title">Mari verifikasi data dirimu</string>
    <string name="kyc_intro_text">Kamu hanya perlu upload foto KTP dan\n verifikasi wajah.</string>
    <string name="kyc_intro_button">Mulai Verifikasi</string>
    <string name="kyc_pending_title">Dokumen sedang kami proses</string>
    <string name="kyc_pending_text">Tunggu hasil prosesnya lewat e-mail\ndalam 1x24 jam ya.</string>
    <string name="kyc_pending_button">Mengerti</string>
    <string name="kyc_failed_title">Yaah, verifikasinya gagal</string>
    <string name="kyc_failed_text">Silakan upload ulang dokumenmu. Pastikan fotonya tidak terpotong dan info di dalamnya terbaca jelas.</string>
    <string name="kyc_failed_text_with_reason">Tenang, kamu masih bisa verifikasi ulang. Verifikasimu gagal karena:</string>
    <string name="kyc_failed_button">Verifikasi Ulang</string>
    <string name="kyc_verified_title">Dokumen Telah Terverifikasi!</string>
    <string name="kyc_verified_text">Data yang Anda berikan telah tersimpan\ndan terlindungi dengan aman di dalam\nsistem Tokopedia.</string>
    <string name="kyc_verified_button">Info Selengkapnya</string>
    <string name="kyc_blacklist_button">Kembali</string>
    <string name="kyc_blacklist_text">Sistem tidak dapat membaca informasi\nyang terdapat pada dokumen anda.</string>
    <string name="ktp_title">Foto bagian depan KTP</string>
    <string name="ktp_subtitle">Yuk, ikuti cara berikut!</string>
    <string name="ktp_body_1">Gunakan KTP asli yang masih berlaku.</string>
    <string name="ktp_body_2">Pastikan foto KTP berada dalam bingkai.</string>
    <string name="ktp_body_3">Pastikan foto KTP terlihat terang dan jelas.</string>
    <string name="ktp_button">Ambil Foto KTP</string>
    <string name="ktp_protection">Kerahasiaan data kamu dijamin sistem Tokopedia</string>
    <string name="face_title">Scan wajah kamu</string>
    <string name="face_subtitle">Kami akan scan wajahmu untuk cocokkan data di KTP. Ikuti instruksi ini:</string>
    <string name="face_subtitle_body_1">Jangan pakai aksesoris yang menutupi wajahmu.</string>
    <string name="face_subtitle_body_2">Pastikan wajahmu terkena pencahayaan yang cukup dan terlihat jelas.</string>
    <string name="face_button">Mulai Verifikasi Wajah</string>
    <string name="face_title_kyc">Foto wajah dan kartu identitas</string>
    <string name="face_subtitle_kyc">Tunjukkan bagian depan kartu identitas dengan posisi di bawah dagu tanpa menutupi wajah.</string>
    <string name="face_button_kyc">Mulai Foto</string>
    <string name="camera_ktp_title">Foto KTP</string>
    <string name="camera_ktp_subtitle">Pastikan KTP kamu terlihat jelas di dalam bingkai foto ini.</string>
    <string name="camera_ktp_subtitle_preview">Pastikan informasi di foto ini sudah terlihat jelas, ya.</string>
    <string name="camera_face_title">Foto Wajah &amp; KTP</string>
    <string name="camera_face_subtitle">Pastikan wajah dan KTP kamu terlihat jelas di dalam bingkai foto ini.</string>
    <string name="camera_face_subtitle_preview">Pastikan wajah dan KTP kamu sudah terlihat jelas, ya.</string>
    <string name="change_button">Ubah</string>
    <string name="form_final_info">Dengan klik “Kirim Dokumen” saya menyetujui syarat &amp; ketentuan yang berlaku</string>
    <string name="form_reupload_info">Dengan klik “Kirim Dokumen” saya menyetujui syarat &amp; ketentuan yang berlaku</string>
    <string name="terms_and_condition">syarat &amp; ketentuan</string>
    <string name="upload_button">Kirim Dokumen</string>
    <string name="upload_button_tradein">Unggah dan Beli Sekarang</string>
    <string name="form_final_subtitle">Satu langkah lagi lho, untuk\nmenyelesaikan verifikasi data dirimu.</string>
    <string name="form_final_subtitle_fail">Foto KTP belum terlihat jelas.\nAmbil ulang foto sekarang.</string>
    <string name="title_kyc_info">Verifikasi Data Diri</string>
    <string name="title_kyc_info_simple">Dokumen Data Diri</string>
    <string name="error_text_image_file_too_big">Foto melebihi ukuran maksimum 10 MB</string>
    <string name="error_text_image_cant_be_accessed">Foto ktp tidak dapat diakses</string>
    <string name="error_text_liveness_image_cant_be_accessed">Foto tidak dapat diakses</string>
    <string name="error_text_image_fail_to_encrypt">Foto tidak dapat disimpan</string>
    <string name="title_kyc_form_ktp">1. Foto KTP</string>
    <string name="title_kyc_form_selfie">2. Foto Diri &amp; KTP</string>
    <string name="title_kyc_form_face">Verifikasi Wajah</string>
    <string name="title_kyc_form_upload">Kirim Dokumen</string>
    <string name="title_kyc_form_fail_verification">Verifikasi Gagal</string>
    <string name="text_notification_success_upload">Dokumen berhasil diunggah. Mohon menunggu verifikasi dalam 1x24 jam.</string>
    <string name="error_upload_image_kyc">Terjadi kesalahan. Mohon coba beberapa saat lagi
        (%s)</string>
    <string name="camera_recapture_text">Foto Ulang</string>
    <string name="camera_next_button">Lanjut</string>
    <string name="kyc_centralized_retake_photo">Foto Ulang KTP</string>
    <string name="user_identification_final_ktp_not_valid">Foto KTP belum terlihat jelas.</string>
    <string name="user_identification_final_retake_ktp">Ambil ulang foto sekarang.</string>
    <string name="kyc_data_security">Tokopedia menjamin keamanan datamu</string>
    <string name="upload_loading_title">Tunggu sebentar, ya…</string>
    <string name="upload_loading_subtitle">Dokumenmu sedang di-upload</string>
    <string name="kyc_face_failed_time_limit_title">Yaa, waktu habis</string>
    <string name="kyc_face_failed_time_limit_subtitle">Kamu telah melebih batas waktu. Coba lagi dan ikuti instruksinya, ya.</string>
    <string name="kyc_face_failed_time_limit_button">Coba Lagi</string>
    <string name="kyc_dialog_title">Keluar dari halaman ini?</string>
    <string name="kyc_benefit_see_more_detail">Lihat Detail Keuntungan</string>
    <string name="kyc_benefit_detail_for_shopping">Buat belanja</string>
    <string name="kyc_benefit_detail_for_selling">Buat jualan</string>
    <string name="kyc_benefit_detail_referral_title">Dapat hadiah Referral</string>
    <string name="kyc_benefit_detail_referral_desc">Udah kumpulin teman di Referral? Kamu bisa klaim hadiahnya setelah verifikasi.</string>
    <string name="kyc_benefit_detail_affiliate_title">Daftar Tokopedia Affiliate</string>
    <string name="kyc_benefit_detail_affiliate_desc">Siap-siap dapat komisi kalau ada yang belanja lewat link kamu!</string>
    <string name="kyc_benefit_detail_adult_product_title">Beli produk khusus dewasa</string>
    <string name="kyc_benefit_detail_adult_product_desc">Kamu bisa langsung beli produknya kalau memenuhi batas minimum usia pembeli.</string>
    <string name="kyc_benefit_detail_bank_account_title">Buka rekening bank</string>
    <string name="kyc_benefit_detail_bank_account_desc">Bisa buka rekening di aplikasi Tokopedia dan langsung pakai buat pembayaran.</string>
    <string name="kyc_benefit_detail_pay_later_title">Belanja sekarang, bayar nanti</string>
    <string name="kyc_benefit_detail_pay_later_desc">Daftar kartu kredit atau pakai PayLater dari layanan keuangan tepercaya.</string>
    <string name="kyc_benefit_detail_mitra_title">Daftar Mitra Tokopedia</string>
    <string name="kyc_benefit_detail_mitra_desc">Tambah pendapatan dengan jualan grosir sebagai Mitra Tokopedia.</string>
    <string name="kyc_benefit_detail_power_merchant_title">Upgrade status toko</string>
    <string name="kyc_benefit_detail_power_merchant_desc">Bisa jadi Power Merchant atau Power Merchant PRO dan nikmatin fiturnya.</string>
    <string name="kyc_benefit_detail_funding_title">Ajukan Modal Toko</string>
    <string name="kyc_benefit_detail_funding_desc">Bisa dapat pinjaman bantuan dana usaha eksklusif buat Seller Tokopedia.</string>
    <string name="goto_kyc_benefit_non_account_title">Nikmatin keuntungannya setelah verifikasi</string>
    <string name="goto_kyc_benefit_non_account_item_title_1">Nikmatin fitur lengkap buat belanja</string>
    <string name="goto_kyc_benefit_non_account_item_subtitle_1">Belanja jadi makin untung dan nyaman.</string>
    <string name="goto_kyc_benefit_non_account_item_title_2">Akses fitur penjualan eksklusif</string>
    <string name="goto_kyc_benefit_non_account_item_subtitle_2">Tokomu upgrade dan bisa naikin performa.</string>
    <string name="goto_kyc_benefit_non_account_item_title_3">GoPay Plus kamu langsung aktif</string>
    <string name="goto_kyc_benefit_non_account_item_subtitle_3">Transaksi jadi makin praktis dan cepat!</string>
    <string name="goto_kyc_benefit_detail_shopping_header">Fitur buat belanja</string>
    <string name="goto_kyc_benefit_detail_shopping_title_1">Tarik saldo Tokopedia Affiliate</string>
    <string name="goto_kyc_benefit_detail_shopping_subtitle_1">Siap raih komisi kalau ada yang beli dari link kamu dan bisa tarik saldonya.</string>
    <string name="goto_kyc_benefit_detail_shopping_title_2">Beli produk khusus dewasa</string>
    <string name="goto_kyc_benefit_detail_shopping_subtitle_2">Bisa langsung beli produknya kalau udah memenuhi batas minimum usia.</string>
    <string name="goto_kyc_benefit_detail_seller_header">Fitur buat jualan</string>
    <string name="goto_kyc_benefit_detail_seller_title_1">Upgrade toko jadi Power Merchant</string>
    <string name="goto_kyc_benefit_detail_seller_subtitle_1">Nikmatin fitur spesial dari PM atau PM Pro buat tingkatin penjualan kamu.</string>
    <string name="goto_kyc_benefit_detail_gopay_header">Keuntungan di GoPay Plus</string>
    <string name="goto_kyc_benefit_detail_gopay_title_1">Dapat kesempatan akses PayLater</string>
    <string name="goto_kyc_benefit_detail_gopay_subtitle_1">Kalau bisa aktifin, kamu bisa bayar di akhir bulan pesanan di Gojek dan Tokopedia.</string>
    <string name="goto_kyc_benefit_detail_gopay_title_2">Isi dompet lebih banyak</string>
    <string name="goto_kyc_benefit_detail_gopay_subtitle_2">Per bulannya kamu bisa punya saldo sampai 20 juta, lho.</string>
    <string name="goto_kyc_benefit_detail_gopay_title_3">Nikmatin fitur menarik lainnya</string>
    <string name="goto_kyc_benefit_detail_gopay_subtitle_3">Transfer ke bank, tarik tunai dan bayar ke teman &amp; keluarga.</string>
    <string name="goto_kyc_onboard_progressive_title">Selangkah lagi buat lanjut verifikasi!</string>
    <string name="goto_kyc_confirm_KTP_name">Oke, Pakai KTP Ini</string>
    <string name="goto_kyc_question_ktp_issue">Bukan KTP kamu? Hubungi Tokopedia Care</string>
    <string name="goto_kyc_awaiting_approval_title">Tunggu ya, lagi ada proses verifikasi di GoPay</string>
    <string name="goto_kyc_awaiting_approval_description">Prosesnya maks. 24 jam setelah kamu verifikasi di GoPay. Setelah selesai, kamu bisa verifikasi di Tokopedia.</string>
    <string name="goto_kyc_awaiting_approval_button">Oke, Siap!</string>
</resources>