<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.tokopedia.unifyprinciples.Typography
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/goto_kyc_benefit_detail_shopping_header"
            app:typographyType="display_1"
            app:typographyWeight="bold"/>

        <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:iconUrl="@string/img_url_goto_kyc_benefit_detail_affiliate"
            app:title="@string/goto_kyc_benefit_detail_shopping_title_1"
            app:description="@string/goto_kyc_benefit_detail_shopping_subtitle_1" />

        <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:iconUrl="@string/img_url_goto_kyc_benefit_detail_adult_content"
            app:title="@string/goto_kyc_benefit_detail_shopping_title_2"
            app:description="@string/goto_kyc_benefit_detail_shopping_subtitle_2" />

        <com.tokopedia.unifyprinciples.Typography
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/goto_kyc_benefit_detail_seller_header"
            app:typographyType="display_1"
            app:typographyWeight="bold"/>

        <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:iconUrl="@string/img_url_goto_kyc_benefit_detail_power_merchant"
            app:title="@string/goto_kyc_benefit_detail_seller_title_1"
            app:description="@string/goto_kyc_benefit_detail_seller_subtitle_1" />

        <com.tokopedia.unifyprinciples.Typography
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/goto_kyc_benefit_detail_gopay_header"
            app:typographyType="display_1"
            app:typographyWeight="bold"/>

        <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:iconUrl="@string/img_url_goto_kyc_benefit_detail_paylater"
            app:title="@string/goto_kyc_benefit_detail_gopay_title_1"
            app:description="@string/goto_kyc_benefit_detail_gopay_subtitle_1" />

        <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:iconUrl="@string/img_url_goto_kyc_benefit_detail_reksadana"
            app:title="@string/goto_kyc_benefit_detail_gopay_title_2"
            app:description="@string/goto_kyc_benefit_detail_gopay_subtitle_2" />

        <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:iconUrl="@string/img_url_goto_kyc_benefit_detail_gopay"
            app:title="@string/goto_kyc_benefit_detail_gopay_title_3"
            app:description="@string/goto_kyc_benefit_detail_gopay_subtitle_3" />

    </LinearLayout>

</ScrollView>