<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/typography"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/goto_kyc_benefit_non_account_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:typographyType="display_2"
        app:typographyWeight="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typography">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_benefit_kyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/card_border"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
                android:id="@+id/goto_kyc_benefit_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:iconUrl="@string/img_url_goto_kyc_benefit_item_shopping"
                app:description="@string/goto_kyc_benefit_non_account_item_subtitle_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/goto_kyc_benefit_non_account_item_title_1" />

            <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
                android:id="@+id/goto_kyc_benefit_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:iconUrl="@string/img_url_goto_kyc_benefit_item_seller"
                app:description="@string/goto_kyc_benefit_non_account_item_subtitle_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goto_kyc_benefit_1"
                app:title="@string/goto_kyc_benefit_non_account_item_title_2" />

            <com.tokopedia.kyc_centralized.ui.customview.KycBenefitItemView
                android:id="@+id/goto_kyc_benefit_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:iconUrl="@string/img_url_goto_kyc_benefit_item_gopay"
                app:description="@string/goto_kyc_benefit_non_account_item_subtitle_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/goto_kyc_benefit_2"
                app:title="@string/goto_kyc_benefit_non_account_item_title_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.tokopedia.unifyprinciples.Typography
            android:id="@+id/see_more_benefit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/kyc_benefit_see_more_detail"
            android:textColor="@color/Unify_GN500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_benefit_kyc"
            app:typographyType="display_2"
            app:typographyWeight="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>