<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:text="@string/goto_kyc_onboard_progressive_title"
        app:typographyType="heading_3"/>

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:text="@string/goto_kyc_progressive_description"
        android:layout_marginTop="8dp"
        app:typographyType="paragraph_3"/>

    <include
        android:id="@+id/layout_data_ktp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_goto_kyc_ktp_gopay"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"/>

    <com.tokopedia.usercomponents.userconsent.ui.UserConsentWidget
        android:id="@+id/consent_goto_kyc_progressive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <com.tokopedia.unifycomponents.UnifyButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginHorizontal="16dp"
        android:text="@string/goto_kyc_confirm_KTP_name"/>

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_tokopedia_care"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:text="@string/goto_kyc_question_ktp_issue"
        app:typographyType="paragraph_3"
        android:layout_marginVertical="16dp"/>

</LinearLayout>