<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/iv_status_submission_lottie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_max="300dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:unify_image_disable_shimmering_placeholder="true" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/goto_kyc_awaiting_approval_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_status_submission_lottie"
        app:typographyType="heading_2" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/goto_kyc_awaiting_approval_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"
        app:typographyType="paragraph_2" />

    <com.tokopedia.unifycomponents.UnifyButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_kyc_awaiting_approval_button"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

</androidx.constraintlayout.widget.ConstraintLayout>